feat: the active column was added to the user table, functionality was added to activate and deactivate a user and the subscriptions were refactored in the user-table component
